--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 }
 
 html {
-    overflow-x: hidden;
+    
     scroll-behavior: smooth;
 }
 
@@ -24,7 +24,7 @@ html {
 }
 
 .inicio .contenido-seccion {
-    max-width: 1000px;
+    
     margin: auto;
     text-align: center;
     padding: 0 10px;
@@ -267,9 +267,12 @@ div .redes img {
 
 }
 
-.container {
+table{
+    display: flex;
+    justify-content: center;   
+     text-align: center;
 
-    margin-left: 10%;
+   
 
 }
 
