--- a/styles.css
+++ b/styles.css
@@ -139,10 +139,12 @@ button.navbar-toggler:hover {
 }
 
 .sobremi .contenido-seccion {
+    
+    margin: auto;
     max-width: 1000px;
     margin-bottom: -5%;
     padding: 0 20px;
-    margin-left: 10%;
+ 
     text-align: center;
 }
 
